fix vertical alignment

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -42,7 +42,7 @@
 // ------------------ Mobile ------------------
 @media (max-width: 600px) {
   .toolbar {
-    padding: 25px 5px 10px 0px;
+    padding: 25px 5px 10px 0;
     margin-bottom: 0.6rem;
   }
 
