--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,8 @@ body {
 
 
 .app-root {
+  margin: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
